KubernetesDocuments/Project/ExportLoadBalancer.yml
kind: Service
apiVersion: v1
metadata:
  name: exportiploadbalancer
spec:
  selector:
    loadbalancer: loadpods
  type:  LoadBalancer
  ports:
    - name: elasticport
      port: 9200
      targetPort: 9200
      protocol: TCP
    - name: elasticport2
      port: 9300
      targetPort: 9300
      protocol: TCP
    - name: mongoport
      port: 27017
      targetPort: 27017
      protocol: TCP
    - name: postgreport
      port: 5432
      targetPort: 5432
      protocol: TCP
    - name: rabbitport1
      port: 5672
      targetPort: 5672
      protocol: TCP
    - name: rabbitport2
      port: 15672
      targetPort: 15672
      protocol: TCP
    - name: zipkinport
      port: 9411
      targetPort: 9411
      protocol: TCP
