KubernetesDocuments/Project/MongoDBLoadBalancer.yml
kind: Service
apiVersion: v1
metadata:
  name:  loadbalancermongo
spec:
  selector:
    app:  deploymentmongodb
  type:  LoadBalancer
  ports:
    - name:  mongotcp
      port:  27017
      targetPort:  27017
