KubernetesDocuments/Project/RabbitMQLoadBalancer.yml
kind: Service
apiVersion: v1
metadata:
  name:  loadbalancerrabbitmq
spec:
  selector:
    app:  deploymentrabbitmq
  type:  LoadBalancer
  ports:
    - name:  rabbitconnectiontcp
      port:  5672
      targetPort:  5672
    - name: rabbitmanagementtcp
      port: 15672
      targetPort: 15672
