KubernetesDocuments/Project/InGress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /zipkin
            pathType: Prefix
            backend:
              service:
                name: clusteripzipkin
                port:
                  number: 9411
